# moneylover-cli

./: CHANGELOG.md  README.md  moneylover-cli.cabal
app/: Api.hs  ApiType.hs  Main.hs
