cabal-version:  3.0
name:           moneylover-cli

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:    0.1.0.0
synopsis:   Moneylover CLI application

-- A longer description of the package.
-- description:

homepage:           github.com/m0ar/moneylover-cli
bug-reports:        github.com/m0ar/moneylover-cli/issues
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Edvard Hübinette
maintainer:         edvard@hubinette.me
category:           Money management app
extra-source-files:
    CHANGELOG.md,
    README.md

executable moneylover-cli
    hs-source-dirs: app
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Api
        ApiType

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        optparse-applicative ^>=0.16.1.0,
        servant ^>=0.18.3,
        servant-client ^>=0.18.3,
        aeson ^>=1.5.6.0,
        http-client ^>=0.7.9,
        http-client-tls ^>=0.3.5.3
    default-language: Haskell2010
